# AgentX

./: .env  INSTALLATION_SUMMARY.md  KASM_INSTALLATION_GUIDE.md  PHASE1_TEST_RESULTS.md  README.md
crates/agent_memory/src/: lib.rs
crates/agent_provider/src/: openai.rs
crates/agent_roles/src/: architect.rs  engineer.rs  product_manager.rs  project_manager.rs  qa_engineer.rs  research_agent.rs  role_builder.rs  searcher.rs
crates/agent_schema/src/: chat_history.rs
crates/agent_verse/src/: agent_manager.rs  environment.rs  system_default.rs
crates/agentx-server/: Cargo.toml
crates/agentx-server/src/: error.rs  main.rs
crates/agentx-server/src/api/: mod.rs  tasks.rs
crates/agentx-server/src/kasm/: client.rs  mod.rs  types.rs
crates/agentx-server/src/state/: app_state.rs  mod.rs
crates/agentx-server/src/websocket/: broadcaster.rs  handler.rs  mod.rs
crates/agentx/src/: company.rs
docs/: IMPLEMENTATION_STATUS.md  KASM_IMPLEMENTATION_PLAN.md  MODEL_ARENA_README.md  README.md
kasm-deployment/: .env.example  README.md  deploy.sh  docker-compose.yml  podman-compose.yml  run-all-tests.sh  stop.sh  test-deployment.sh  test-server.sh
kasm-workspaces/: build-all.sh
kasm-workspaces/agentx-developer/: Dockerfile  build.sh
kasm-workspaces/agentx-developer/scripts/: dev-helper.sh
kasm-workspaces/agentx-researcher/: Dockerfile  build.sh
kasm-workspaces/agentx-researcher/scripts/: research-helper.sh
